Task 3.4 Implement 3 recently viewed products

--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -39,3 +39,14 @@ body.product-list {
 .success{
  color:green;
 }
+
+.lastReviewedProduct{
+    border: 1px solid green;
+    margin:5px;
+    width: 5%;
+    display:inline;
+    float:left;
+}
+.labelReviewedProducts{
+    font-weight:bold;
+}
